--- a/docs/docs/integrations/chat/oci_data_science.ipynb
+++ b/docs/docs/integrations/chat/oci_data_science.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "---\n",
-    "sidebar_label: ChatOCIModelDeploymentEndpoint\n",
+    "sidebar_label: ChatOCIModelDeployment\n",
     "---"
    ]
   },
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ChatOCIModelDeploymentEndpoint\n",
+    "# ChatOCIModelDeployment\n",
     "\n",
     "[OCI Data Science](https://docs.oracle.com/en-us/iaas/data-science/using/home.htm) is a fully managed and serverless platform for data science teams to build, train, and manage machine learning models in the Oracle Cloud Infrastructure.\n",
     "\n",
@@ -64,7 +64,7 @@
    "source": [
     "## Instantiation\n",
     "\n",
-    "* Using `ChatOCIModelDeploymentEndpoint` when you need a generic entry point for deploying models. You can pass model parameters through `model_kwargs` during the instantiation of this class. This allows for flexibility and ease of configuration without needing to rely on framework-specific details."
+    "* Using `ChatOCIModelDeployment` when you need a generic entry point for deploying models. You can pass model parameters through `model_kwargs` during the instantiation of this class. This allows for flexibility and ease of configuration without needing to rely on framework-specific details."
    ]
   },
   {
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "import ads\n",
-    "from langchain_community.chat_models import ChatOCIModelDeploymentEndpoint\n",
+    "from langchain_community.chat_models import ChatOCIModelDeployment\n",
     "\n",
     "# Set authentication through ads\n",
     "# Use resource principal are operating within a\n",
@@ -87,7 +87,7 @@
     "# Using generic class as entry point, you will be able\n",
     "# to pass model parameters through model_kwargs during\n",
     "# instantiation.\n",
-    "chat = ChatOCIModelDeploymentEndpoint(\n",
+    "chat = ChatOCIModelDeployment(\n",
     "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\",\n",
     "    streaming=True,\n",
     "    max_retries=1,\n",
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Using framework specific class like `ChatOCIModelDeploymentEndpointVLLM`: This is suitable when you are working with a specific framework (e.g. `vLLM`) and need to pass model parameters directly through the constructor, streamlining the setup process."
+    "* Using framework specific class like `ChatOCIModelDeploymentVLLM`: This is suitable when you are working with a specific framework (e.g. `vLLM`) and need to pass model parameters directly through the constructor, streamlining the setup process."
    ]
   },
   {
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from langchain_community.chat_models import ChatOCIModelDeploymentEndpointVLLM\n",
+    "from langchain_community.chat_models import ChatOCIModelDeploymentVLLM\n",
     "\n",
     "# Set authentication through environment variables\n",
     "# Use API Key setup when you are working from a local\n",
@@ -126,7 +126,7 @@
     "# Replace the endpoint uri with your own\n",
     "# Using framework specific class as entry point, you will\n",
     "# be able to pass model parameters in constructor.\n",
-    "chat = ChatOCIModelDeploymentEndpointVLLM(\n",
+    "chat = ChatOCIModelDeploymentVLLM(\n",
     "    endpoint=\"https://modeldeployment.<region>.oci.customer-oci.com/<md_ocid>/predict\",\n",
     ")"
    ]
@@ -255,13 +255,13 @@
     }
    ],
    "source": [
-    "from langchain_community.chat_models import ChatOCIModelDeploymentEndpoint\n",
+    "from langchain_community.chat_models import ChatOCIModelDeployment\n",
     "\n",
     "system = \"You are a helpful translator that translates {input_language} to {output_language}.\"\n",
     "human = \"{text}\"\n",
     "prompt = ChatPromptTemplate.from_messages([(\"system\", system), (\"human\", human)])\n",
     "\n",
-    "chat = ChatOCIModelDeploymentEndpoint(\n",
+    "chat = ChatOCIModelDeployment(\n",
     "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\"\n",
     ")\n",
     "chain = prompt | chat\n",
@@ -305,7 +305,7 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "from langchain_community.chat_models import ChatOCIModelDeploymentEndpoint\n",
+    "from langchain_community.chat_models import ChatOCIModelDeployment\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
     "\n",
@@ -313,7 +313,7 @@
     "    [(\"human\", \"List out the 5 states in the United State.\")]\n",
     ")\n",
     "\n",
-    "chat = ChatOCIModelDeploymentEndpoint(\n",
+    "chat = ChatOCIModelDeployment(\n",
     "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\"\n",
     ")\n",
     "\n",
@@ -350,7 +350,7 @@
    ],
    "source": [
     "from langchain_core.pydantic_v1 import BaseModel\n",
-    "from langchain_community.chat_models import ChatOCIModelDeploymentEndpoint\n",
+    "from langchain_community.chat_models import ChatOCIModelDeployment\n",
     "\n",
     "\n",
     "class Joke(BaseModel):\n",
@@ -360,7 +360,7 @@
     "    punchline: str\n",
     "\n",
     "\n",
-    "chat = ChatOCIModelDeploymentEndpoint(\n",
+    "chat = ChatOCIModelDeployment(\n",
     "    endpoint=\"https://modeldeployment.us-ashburn-1.oci.customer-oci.com/<ocid>/predict\",\n",
     ")\n",
     "structured_llm = chat.with_structured_output(Joke, method=\"json_mode\")\n",
@@ -379,9 +379,9 @@
     "\n",
     "For comprehensive details on all features and configurations, please refer to the API reference documentation for each class:\n",
     "\n",
-    "* [ChatOCIModelDeploymentEndpoint](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpoint.html)\n",
-    "* [ChatOCIModelDeploymentEndpointVLLM](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpointVLLM.html)\n",
-    "* [ChatOCIModelDeploymentEndpointTGI](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpointTGI.html)"
+    "* [ChatOCIModelDeployment](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science.ChatOCIModelDeployment.html)\n",
+    "* [ChatOCIModelDeploymentVLLM](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science.ChatOCIModelDeploymentVLLM.html)\n",
+    "* [ChatOCIModelDeploymentTGI](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science.ChatOCIModelDeploymentTGI.html)"
    ]
   },
   {
