--- a/docs/docs/versions/migrating_chains/llm_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/llm_chain.ipynb
@@ -2,12 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b57124cc-60a0-4c18-b7ce-3e483d1024a2",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Migrating from LLMChain\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ce8457ed-c0b1-4a74-abbd-9d3d2211270f",
    "metadata": {},
    "source": [
-    "## `LLMChain`\n",
-    "<span data-heading-keywords=\"llmchain\"></span>\n",
-    "\n",
     "[`LLMChain`](https://api.python.langchain.com/en/latest/chains/langchain.chains.llm.LLMChain.html) combined a prompt template, LLM, and output parser into a class.\n",
     "\n",
     "Some advantages of switching to the LCEL implementation are:\n",
