--- a/docs/docs/versions/migrating_chains/retrieval_qa.ipynb
+++ b/docs/docs/versions/migrating_chains/retrieval_qa.ipynb
@@ -2,12 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "eddcd5c1-cbe9-4a7d-8903-7d1ab29f9094",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Migrating from RetrievalQA\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2d37868-dd01-4814-a76a-256f36cf66f7",
    "metadata": {},
    "source": [
-    "## `RetrievalQA`\n",
-    "<span data-heading-keywords=\"retrievalqa\"></span>\n",
-    "\n",
     "The [`RetrievalQA`](https://api.python.langchain.com/en/latest/chains/langchain.chains.retrieval_qa.base.RetrievalQA.html) chain performed natural-language question answering over a data source using retrieval-augmented generation.\n",
     "\n",
     "Some advantages of switching to the LCEL implementation are:\n",
