--- a/docs/docs/versions/migrating_chains/index.mdx
+++ b/docs/docs/versions/migrating_chains/index.mdx
@@ -24,7 +24,7 @@ LangChain maintains a number of legacy abstractions. Many of these can be reimpl
 
 The LCEL implementations can be slightly more verbose, but there are significant benefits in transparency and customizability.
 
-The below guides review LCEL implementations of common legacy abstractions.
+The below pages assist with migration from various specific chains to LCEL:
 
 - [LLMChain](/docs/versions/migrating_chains/llm_chain)
 - [ConversationChain](/docs/versions/migrating_chains/conversation_chain)
