--- a/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
@@ -147,6 +147,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d47c37dd-5c11-416c-a3b6-bec413cd70e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.invoke({\"question\": \"...\"})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d1ee55bc-ffc8-4cfa-801c-993953a08cfd",
    "metadata": {},
