--- a/docs/docs/how_to/migrate_agent.ipynb
+++ b/docs/docs/how_to/migrate_agent.ipynb
@@ -302,7 +302,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.messages import SystemMessage\n",
     "from langgraph.prebuilt import create_react_agent\n",
     "\n",
     "system_message = \"You are a helpful assistant. Respond only in Spanish.\"\n",
@@ -341,14 +340,8 @@
    "source": [
     "from typing import List\n",
     "\n",
-    "from langchain_core.messages import BaseMessage\n",
     "from langgraph.prebuilt import create_react_agent\n",
-    "from typing_extensions import TypedDict\n",
-    "\n",
-    "\n",
-    "class AgentState(TypedDict):\n",
-    "    messages: List[BaseMessage]\n",
-    "\n",
+    "from langgraph.prebuilt.chat_agent_executor import AgentState\n",
     "\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
@@ -503,7 +496,6 @@
     }
    ],
    "source": [
-    "from langchain_core.messages import SystemMessage\n",
     "from langgraph.checkpoint import MemorySaver  # an in-memory checkpointer\n",
     "from langgraph.prebuilt import create_react_agent\n",
     "\n",
@@ -632,14 +624,8 @@
    "source": [
     "from typing import List\n",
     "\n",
-    "from langchain_core.messages import BaseMessage\n",
     "from langgraph.prebuilt import create_react_agent\n",
-    "from typing_extensions import TypedDict\n",
-    "\n",
-    "\n",
-    "class AgentState(TypedDict):\n",
-    "    messages: List[BaseMessage]\n",
-    "\n",
+    "from langgraph.prebuilt.chat_agent_executor import AgentState\n",
     "\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
@@ -1281,15 +1267,9 @@
    "source": [
     "from typing import List\n",
     "\n",
-    "from langchain_core.messages import BaseMessage\n",
     "from langgraph.errors import GraphRecursionError\n",
     "from langgraph.prebuilt import create_react_agent\n",
-    "from typing_extensions import TypedDict\n",
-    "\n",
-    "\n",
-    "class AgentState(TypedDict):\n",
-    "    messages: List[BaseMessage]\n",
-    "\n",
+    "from langgraph.prebuilt.chat_agent_executor import AgentState\n",
     "\n",
     "magic_step_num = 1\n",
     "\n",
