--- a/libs/cli/langchain_cli/integration_template/docs/kv_store.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/kv_store.ipynb
@@ -124,15 +124,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kv_store.mset([\n",
-    "    [\"key1\", b\"value1\"],\n",
-    "    [\"key2\", b\"value2\"],\n",
-    "])\n",
+    "kv_store.mset(\n",
+    "    [\n",
+    "        [\"key1\", b\"value1\"],\n",
+    "        [\"key2\", b\"value2\"],\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "kv_store.mget([\n",
-    "    \"key1\",\n",
-    "    \"key2\",\n",
-    "])"
+    "kv_store.mget(\n",
+    "    [\n",
+    "        \"key1\",\n",
+    "        \"key2\",\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -148,15 +152,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kv_store.mdelete([\n",
-    "    \"key1\",\n",
-    "    \"key2\",\n",
-    "])\n",
+    "kv_store.mdelete(\n",
+    "    [\n",
+    "        \"key1\",\n",
+    "        \"key2\",\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "kv_store.mget([\n",
-    "    \"key1\",\n",
-    "    \"key2\",\n",
-    "])"
+    "kv_store.mget(\n",
+    "    [\n",
+    "        \"key1\",\n",
+    "        \"key2\",\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
