--- a/docs/docs/integrations/vectorstores/index.mdx
+++ b/docs/docs/integrations/vectorstores/index.mdx
@@ -13,17 +13,17 @@ The table below lists the features for some of our most popular vector stores.
 
 Vectorstore|Delete by ID|Filtering|Search by Vector|Search with score|Async|Passes Standard Tests|Multi Tenancy|Local/Cloud|IDs in add Documents
 :-|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:
-AstraDBVectorStore|✅|✅|✅|✅|✅|❌|❌|❌|✅|✅
-Chroma|✅|✅|✅|✅|✅|❌|❌|❌|✅|✅
-Clickhouse|✅|✅|❌|✅|❌|❌|❌|❌|✅|✅
-CouchbaseVectorStore|✅|✅|❌|✅|✅|❌|❌|❌|✅|✅
-ElasticsearchStore|✅|✅|✅|❌|✅|❌|❌|❌|✅|✅
-FAISS|✅|✅|✅|✅|✅|❌|❌|❌|✅|✅
-InMemoryVectorStore|✅|✅|❌|✅|✅|❌|❌|❌|✅|✅
-Milvus|✅|✅|❌|✅|✅|❌|❌|❌|✅|✅
-MongoDBAtlasVectorSearch|✅|✅|❌|❌|✅|❌|❌|❌|✅|✅
-PGVector|✅|✅|✅|✅|✅|❌|❌|❌|✅|✅
-PineconeVectorStore|✅|✅|✅|❌|✅|❌|❌|❌|✅|✅
-QdrantVectorStore|✅|✅|✅|✅|✅|❌|❌|❌|✅|✅
-Redis|✅|✅|✅|✅|✅|❌|❌|❌|✅|✅
+AstraDBVectorStore|✅|✅|✅|✅|✅|❌|❌|❌|Local|✅
+Chroma|✅|✅|✅|✅|✅|❌|❌|❌|Local|✅
+Clickhouse|✅|✅|❌|✅|❌|❌|❌|❌|Local|✅
+CouchbaseVectorStore|✅|✅|❌|✅|✅|❌|❌|❌|Local|✅
+ElasticsearchStore|✅|✅|✅|❌|✅|❌|❌|❌|Local|✅
+FAISS|✅|✅|✅|✅|✅|❌|❌|❌|Local|✅
+InMemoryVectorStore|✅|✅|❌|✅|✅|❌|❌|❌|Local|✅
+Milvus|✅|✅|❌|✅|✅|❌|❌|❌|Local|✅
+MongoDBAtlasVectorSearch|✅|✅|❌|❌|✅|❌|❌|❌|Local|✅
+PGVector|✅|✅|✅|✅|✅|❌|❌|❌|Local|✅
+PineconeVectorStore|✅|✅|✅|❌|✅|❌|❌|❌|Local|✅
+QdrantVectorStore|✅|✅|✅|✅|✅|❌|❌|❌|Local|✅
+Redis|✅|✅|✅|✅|✅|❌|❌|❌|Local|✅
 
