--- a/docs/docs/integrations/tools/exa_search.ipynb
+++ b/docs/docs/integrations/tools/exa_search.ipynb
@@ -46,18 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install --upgrade --quiet langchain-exa \n",
     "\n",
@@ -111,19 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "0CsJFtuFodAK"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install --upgrade --quiet  langchain-exa"
    ]
@@ -183,20 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "id": "x72pY95WodAP"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vishalkhanna/Documents/projects/langchain/.venv/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `OpenAIFunctionsAgent` was deprecated in LangChain 0.1.0 and will be removed in 0.3.0. Use create_openai_functions_agent instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.agents import AgentExecutor, OpenAIFunctionsAgent\n",
     "from langchain_core.messages import SystemMessage\n",
@@ -215,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -226,14 +200,6 @@
     "scrolled": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vishalkhanna/Documents/projects/langchain/.venv/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -360,7 +326,22 @@
       "Summary: None\n",
       "\n",
       "\n",
-      "Autoprompt String: Here is a fascinating article about cats:\u001b[0m\u001b[32;1m\u001b[1;3mThe article titled \"How Islam conquered my mother’s fear of cats\" by Qais Hussain discusses how the author used his Islamic faith to convince his mother to overcome her fear of cats and eventually become a cat lover. The author's mother, who previously loathed all animals, particularly cats, was persuaded to accept a kitten into their home after learning about the positive views of cats in Islam. Cats are viewed as holy animals in Islam, admired for their cleanliness and revered for centuries in Muslim culture. The Prophet Muhammad himself was known to be a cat lover. The story highlights how the author's mother went from fearing cats to fully adopting the kitten, named Milo, as her fifth child. She now cares for Milo, plays with him, and showers him with love and attention, showing a complete transformation from her initial fear of cats. The article showcases how the author used his religious beliefs to change his mother's perspective on cats and how she now considers cats as a blessing from God that brings happiness and positivity to their lives.\u001b[0m\n",
+      "Autoprompt String: Here is a fascinating article about cats:\u001b[0m\u001b[32;1m\u001b[1;3mHere is a fascinating article about cats:\n",
+      "\n",
+      "### The Feline Mystique\n",
+      "\n",
+      "**Source:** [McSweeney's](https://www.mcsweeneys.net/articles/the-feline-mystique)\n",
+      "\n",
+      "**Summary:**\n",
+      "The article humorously explores the existential dilemmas faced by American house cats. It delves into the \"house cat's syndrome,\" a term coined to describe the dissatisfaction and yearning for something more than the comforts of domestic life. Despite having on-demand petting, free healthcare, and viral video fame, cats seem to crave freedom and adventure. The piece also touches on the psychological struggles of cats, such as feeling hollow or ashamed after chasing a laser pointer. Ultimately, it suggests that cats desire more than just luxury—they want total world domination, but only after a two-hour nap.\n",
+      "\n",
+      "**Key Points:**\n",
+      "- American house cats experience a sense of dissatisfaction and yearning.\n",
+      "- The \"house cat's syndrome\" describes their existential dilemmas.\n",
+      "- Despite their luxurious lives, cats crave freedom and adventure.\n",
+      "- The article humorously suggests that cats aim for world domination.\n",
+      "\n",
+      "For more details, you can read the full article [here](https://www.mcsweeneys.net/articles/the-feline-mystique).\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -368,10 +349,10 @@
     {
      "data": {
       "text/plain": [
-       "'The article titled \"How Islam conquered my mother’s fear of cats\" by Qais Hussain discusses how the author used his Islamic faith to convince his mother to overcome her fear of cats and eventually become a cat lover. The author\\'s mother, who previously loathed all animals, particularly cats, was persuaded to accept a kitten into their home after learning about the positive views of cats in Islam. Cats are viewed as holy animals in Islam, admired for their cleanliness and revered for centuries in Muslim culture. The Prophet Muhammad himself was known to be a cat lover. The story highlights how the author\\'s mother went from fearing cats to fully adopting the kitten, named Milo, as her fifth child. She now cares for Milo, plays with him, and showers him with love and attention, showing a complete transformation from her initial fear of cats. The article showcases how the author used his religious beliefs to change his mother\\'s perspective on cats and how she now considers cats as a blessing from God that brings happiness and positivity to their lives.'"
+       "'Here is a fascinating article about cats:\\n\\n### The Feline Mystique\\n\\n**Source:** [McSweeney\\'s](https://www.mcsweeneys.net/articles/the-feline-mystique)\\n\\n**Summary:**\\nThe article humorously explores the existential dilemmas faced by American house cats. It delves into the \"house cat\\'s syndrome,\" a term coined to describe the dissatisfaction and yearning for something more than the comforts of domestic life. Despite having on-demand petting, free healthcare, and viral video fame, cats seem to crave freedom and adventure. The piece also touches on the psychological struggles of cats, such as feeling hollow or ashamed after chasing a laser pointer. Ultimately, it suggests that cats desire more than just luxury—they want total world domination, but only after a two-hour nap.\\n\\n**Key Points:**\\n- American house cats experience a sense of dissatisfaction and yearning.\\n- The \"house cat\\'s syndrome\" describes their existential dilemmas.\\n- Despite their luxurious lives, cats crave freedom and adventure.\\n- The article humorously suggests that cats aim for world domination.\\n\\nFor more details, you can read the full article [here](https://www.mcsweeneys.net/articles/the-feline-mystique).'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
