--- a/docs/docs/integrations/widget/yfilesWidget.ipynb
+++ b/docs/docs/integrations/widget/yfilesWidget.ipynb
@@ -32,14 +32,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d88285fe-91af-4b95-8e6b-0aca3323901d",
-   "metadata": {},
-   "source": [
-    "We will be using the same introductory graph as "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e329bc92-e4ce-47d6-8735-4605043f5f3e",
@@ -168,7 +160,7 @@
     "## Widget visualization\n",
     "\n",
     "\n",
-    "To actually use the widget, call the `show_jupyter_widget` funtion with your Runnable."
+    "To actually use the widget, simply call the `show_jupyter_widget` funtion with your Runnable."
    ]
   },
   {
