--- a/docs/docs/integrations/widget/yfilesWidget.ipynb
+++ b/docs/docs/integrations/widget/yfilesWidget.ipynb
@@ -180,7 +180,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "YfilesJupyterWidget.show_jupyter_widget(app)"
+    "w=YfilesJupyterWidget()\n",
+    "w.show_jupyter_widget(app)"
    ]
   }
  ],
