--- a/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
@@ -138,10 +138,16 @@
     "\n",
     "Question: {question}\"\"\"\n",
     ")\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
     "chain = (\n",
-    "    RunnablePassthrough.assign(context=(lambda x: x[\"question\"]) | retriever)\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
     "    | prompt\n",
-    "    | ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "    | llm\n",
     "    | StrOutputParser()\n",
     ")"
    ]
@@ -153,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chain.invoke({\"question\": \"...\"})"
+    "chain.invoke(\"...\")"
    ]
   },
   {
