--- a/docs/docs/integrations/retrievers/tavily.ipynb
+++ b/docs/docs/integrations/retrievers/tavily.ipynb
@@ -15,9 +15,16 @@
    "source": [
     "# TavilySearchAPIRetriever\n",
     "\n",
+    "## Overview\n",
     ">[Tavily's Search API](https://tavily.com) is a search engine built specifically for AI agents (LLMs), delivering real-time, accurate, and factual results at speed.\n",
     "\n",
     "We can use this as a [retriever](/docs/how_to#retrievers). It will show functionality specific to this integration. After going through, it may be useful to explore [relevant use-case pages](/docs/how_to#qa-with-rag) to learn how to use this vectorstore as part of a larger chain.\n",
+    "\n",
+    "### Integration details\n",
+    "\n",
+    "| Retriever | Namespace | Native async | Local |\n",
+    "| :--- | :--- | :---: | :---: |\n",
+    "[TavilySearchAPIRetriever](https://api.python.langchain.com/en/latest/retrievers/langchain_community.retrievers.tavily_search_api.TavilySearchAPIRetriever.html) | langchain_community.retrievers | ❌ | ❌ |\n",
     "\n",
     "## Setup"
    ]
