--- a/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/retrievers.ipynb
@@ -17,9 +17,17 @@
    "source": [
     "# __ModuleName__Retriever\n",
     "\n",
+    "## Overview\n",
     "- TODO: Make sure API reference link is correct.\n",
     "\n",
     "This will help you getting started with the __ModuleName__ [retriever](/docs/concepts/#retrievers). For detailed documentation of all __ModuleName__Retriever features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/retrievers/__module_name__.retrievers.__ModuleName__.__ModuleName__Retriever.html).\n",
+    "\n",
+    "### Integration details\n",
+    "\n",
+    "| Retriever | Namespace | Native async | Local |\n",
+    "| :--- | :--- | :---: | :---: |\n",
+    "[__ModuleName__Retriever](https://api.python.langchain.com/en/latest/retrievers/__package_name__.retrievers.__module_name__.__ModuleName__Retriever.html) | __package_name__.retrievers | ❌ | ❌ |\n",
+    "\n",
     "\n",
     "## Setup\n",
     "\n",
