--- a/docs/docs/integrations/chat/vllm.ipynb
+++ b/docs/docs/integrations/chat/vllm.ipynb
@@ -12,14 +12,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb7e5679-aa06-47e4-a1a3-b6b70e604017",
+   "id": "8f82e243-f4ee-44e2-b417-099b6401ae3e",
    "metadata": {},
    "source": [
     "# vLLM Chat\n",
     "\n",
     "vLLM can be deployed as a server that mimics the OpenAI API protocol. This allows vLLM to be used as a drop-in replacement for applications using OpenAI API. This server can be queried in the same format as OpenAI API.\n",
     "\n",
-    "This notebook covers how to get started with vLLM chat models using langchain's `ChatOpenAI` **as it is**."
+    "## Overview\n",
+    "This will help you getting started with vLLM [chat models](/docs/concepts/#chat-models), which leverage the `langchain-openai` package. For detailed documentation of all `ChatOpenAI` features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/chat_models/langchain_openai.chat_models.base.ChatOpenAI.html).\n",
+    "\n",
+    "### Integration details\n",
+    "\n",
+    "| Class | Package | Local | Serializable | JS support | Package downloads | Package latest |\n",
+    "| :--- | :--- | :---: | :---: |  :---: | :---: | :---: |\n",
+    "| [ChatOpenAI](https://api.python.langchain.com/en/latest/chat_models/langchain_openai.chat_models.base.ChatOpenAI.html) | [langchain_openai](https://api.python.langchain.com/en/latest/langchain_openai.html) | ✅ | beta | ❌ | ![PyPI - Downloads](https://img.shields.io/pypi/dm/langchain_openai?style=flat-square&label=%20) | ![PyPI - Version](https://img.shields.io/pypi/v/langchain_openai?style=flat-square&label=%20) |\n",
+    "\n",
+    "### Model features\n",
+    "Specific model features-- such as tool calling, support for multi-modal inputs, support for token-level streaming, etc.-- will depend on the hosted model.\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "See the vLLM docs [here](https://docs.vllm.ai/en/latest/).\n",
+    "\n",
+    "To access vLLM models through LangChain, you'll need to install the `langchain-openai` integration package.\n",
+    "\n",
+    "### Credentials\n",
+    "\n",
+    "Authentication will depend on specifics of the inference server."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3b1707a-cf2c-4367-94e3-436c43402503",
+   "metadata": {},
+   "source": [
+    "If you want to get automated tracing of your model calls you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e40bd5e-cbaa-41ef-aaf9-0858eb207184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass(\"Enter your LangSmith API key: \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0739b647-609b-46d3-bdd3-e86fe4463288",
+   "metadata": {},
+   "source": [
+    "### Installation\n",
+    "\n",
+    "The LangChain vLLM integration can be accessed via the `langchain-openai` package:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7afcfbdc-56aa-4529-825a-8acbe7aa5241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -qU langchain-openai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cf576d6-7b67-4937-bf99-39071e85720c",
+   "metadata": {},
+   "source": [
+    "## Instantiation\n",
+    "\n",
+    "Now we can instantiate our model object and generate chat completions:"
    ]
   },
   {
@@ -58,6 +127,14 @@
     "    max_tokens=5,\n",
     "    temperature=0,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34b18328-5e8b-4ff2-9b89-6fbb76b5c7f0",
+   "metadata": {},
+   "source": [
+    "## Invocation"
    ]
   },
   {
@@ -151,19 +228,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a580a1e4-11a3-4277-bfba-bfb414ac7201",
+   "metadata": {},
+   "source": [
+    "## Chaining\n",
+    "\n",
+    "We can [chain](/docs/how_to/sequence/) our model with a prompt template like so:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bbd9861-2b94-4920-8708-b690004f4c4d",
+   "id": "dd0f4043-48bd-4245-8bdb-e7669666a277",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "prompt = ChatPromptTemplate(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a helpful assistant that translates {input_language} to {output_language}.\",\n",
+    "        ),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "chain = prompt | llm\n",
+    "chain.invoke(\n",
+    "    {\n",
+    "        \"input_language\": \"English\",\n",
+    "        \"output_language\": \"German\",\n",
+    "        \"input\": \"I love programming.\",\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "265f5d51-0a76-4808-8d13-ef598ee6e366",
+   "metadata": {},
+   "source": [
+    "## API reference\n",
+    "\n",
+    "For detailed documentation of all features and configurations exposed via `langchain-openai`, head to the API reference: https://api.python.langchain.com/en/latest/chat_models/langchain_openai.chat_models.base.ChatOpenAI.html\n",
+    "\n",
+    "Refer to the vLLM [documentation](https://docs.vllm.ai/en/latest/) as well."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p310",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda_pytorch_p310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
