--- a/docs/docs/integrations/chat/vllm.ipynb
+++ b/docs/docs/integrations/chat/vllm.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "inference_server_url = \"http://localhost:8000/v1\"\n",
     "\n",
-    "chat = ChatOpenAI(\n",
+    "llm = ChatOpenAI(\n",
     "    model=\"mosaicml/mpt-7b\",\n",
     "    openai_api_key=\"EMPTY\",\n",
     "    openai_api_base=inference_server_url,\n",
@@ -165,66 +165,7 @@
     "        content=\"Translate the following sentence from English to Italian: I love programming.\"\n",
     "    ),\n",
     "]\n",
-    "chat(messages)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55fc7046-a6dc-4720-8c0c-24a6db76a4f4",
-   "metadata": {},
-   "source": [
-    "You can make use of templating by using a `MessagePromptTemplate`. You can build a `ChatPromptTemplate` from one or more `MessagePromptTemplates`. You can use ChatPromptTemplate's format_prompt -- this returns a `PromptValue`, which you can convert to a string or `Message` object, depending on whether you want to use the formatted value as input to an llm or chat model.\n",
-    "\n",
-    "For convenience, there is a `from_template` method exposed on the template. If you were to use this template, this is what it would look like:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "123980e9-0dee-4ce5-bde6-d964dd90129c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "template = (\n",
-    "    \"You are a helpful assistant that translates {input_language} to {output_language}.\"\n",
-    ")\n",
-    "system_message_prompt = SystemMessagePromptTemplate.from_template(template)\n",
-    "human_template = \"{text}\"\n",
-    "human_message_prompt = HumanMessagePromptTemplate.from_template(human_template)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "b2fb8c59-8892-4270-85a2-4f8ab276b75d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=' I love programming too.', additional_kwargs={}, example=False)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chat_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [system_message_prompt, human_message_prompt]\n",
-    ")\n",
-    "\n",
-    "# get a chat completion from the formatted messages\n",
-    "chat(\n",
-    "    chat_prompt.format_prompt(\n",
-    "        input_language=\"English\", output_language=\"Italian\", text=\"I love programming.\"\n",
-    "    ).to_messages()\n",
-    ")"
+    "llm.invoke(messages)"
    ]
   },
   {
