--- a/docs/docs/integrations/toolkits/openapi.ipynb
+++ b/docs/docs/integrations/toolkits/openapi.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Union\n",
+    "from typing import Any, Dict, Union\n",
     "\n",
     "import requests\n",
     "import yaml\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "db062da7-f22c-4f36-9df8-1da96c9f7538",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c1e47be9-374a-457c-928a-48f02b5530e3",
    "metadata": {},
    "outputs": [
@@ -280,8 +280,8 @@
       "Fetch the top two posts. What are their titles?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  requests_get (call_WE6RY5LoQYFWnkNrnaARcnUt)\n",
-      " Call ID: call_WE6RY5LoQYFWnkNrnaARcnUt\n",
+      "  requests_get (call_RV2SOyzCnV5h2sm4WPgG8fND)\n",
+      " Call ID: call_RV2SOyzCnV5h2sm4WPgG8fND\n",
       "  Args:\n",
       "    url: https://jsonplaceholder.typicode.com/posts?_limit=2\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
