--- a/docs/docs/integrations/toolkits/slack.ipynb
+++ b/docs/docs/integrations/toolkits/slack.ipynb
@@ -117,19 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[SlackGetChannel(client=<slack_sdk.web.client.WebClient object at 0x10b133370>),\n",
-       " SlackGetMessage(client=<slack_sdk.web.client.WebClient object at 0x1076c8340>),\n",
-       " SlackScheduleMessage(client=<slack_sdk.web.client.WebClient object at 0x107603be0>),\n",
-       " SlackSendMessage(client=<slack_sdk.web.client.WebClient object at 0x10b182140>)]"
+       "[SlackGetChannel(client=<slack_sdk.web.client.WebClient object at 0x10ce3a4d0>),\n",
+       " SlackGetMessage(client=<slack_sdk.web.client.WebClient object at 0x10ce3a0e0>),\n",
+       " SlackScheduleMessage(client=<slack_sdk.web.client.WebClient object at 0x10ce3a050>),\n",
+       " SlackSendMessage(client=<slack_sdk.web.client.WebClient object at 0x10ce3a020>)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,27 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'tool'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "event[\"messages\"][-2].type"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -209,12 +189,12 @@
       "When was the #general channel created?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  get_channelid_name_dict (call_2opNJA38jzEXcualrtnunUgx)\n",
-      " Call ID: call_2opNJA38jzEXcualrtnunUgx\n",
+      "  get_channelid_name_dict (call_mINmB55OWDIkXykGXZXaL5Ar)\n",
+      " Call ID: call_mINmB55OWDIkXykGXZXaL5Ar\n",
       "  Args:\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "The #general channel was created on 1671043305.\n"
+      "The #general channel was created on Unix timestamp 1671043305, which corresponds to \"Mon, 12 Dec 2022 18:41:45 GMT\" in human-readable format.\n"
      ]
     }
    ],
