fix gmail imports

--- a/docs/docs/integrations/toolkits/gmail.ipynb
+++ b/docs/docs/integrations/toolkits/gmail.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.agent_toolkits import GmailToolkit\n",
+    "from langchain_google_community import GmailToolkit\n",
     "\n",
     "toolkit = GmailToolkit()"
    ]
@@ -95,7 +95,7 @@
    },
    "outputs": [],
    "source": [
-    "from langchain_community.tools.gmail.utils import (\n",
+    "from langchain_google_community.gmail.utils import (\n",
     "    build_resource_service,\n",
     "    get_gmail_credentials,\n",
     ")\n",
