--- a/docs/docs/integrations/stores/cassandra.ipynb
+++ b/docs/docs/integrations/stores/cassandra.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "from langchain_community.storage import CassandraByteStore\n",
     "\n",
-    "store = CassandraByteStore(\n",
+    "kv_store = CassandraByteStore(\n",
     "    table=\"my_store\",\n",
     "    session=session,\n",
     "    keyspace=\"<YOUR KEYSPACE>\",\n",
