--- a/cookbook/multi_modal_RAG_medical_vdms.ipynb
+++ b/cookbook/multi_modal_RAG_medical_vdms.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "This project is driven by the need to reduce the dependency on extensive expert involvement, which often acts as a significant bottleneck in the medical field. By automating and streamlining data queries and responses, the Multi-Modal RAG application will empower medical professionals and researchers to make faster, more informed decisions. Moreover, ensuring data security and privacy is crucial for maintaining the integrity and confidentiality of sensitive medical information, thus fostering trust and compliance with global data protection regulations such as HIPAA and GDPR.\n",
     "\n",
-    "Ultimately, this RFC aims to create a Multi-Modal Q&A application tailored for the medical domain that not only meets the technical and operational needs of the medical community but also addresses the broader challenges of accessibility, security, and efficiency in medical data management.\n",
+    "Ultimately, this cookbook aims to create a Multi-Modal RAG application tailored for the medical domain that not only meets the technical and operational needs of the medical community but also addresses the broader challenges of accessibility, security, and efficiency in medical data management.\n",
     "\n",
     "Many datasets in the medical domain contain a mixture of modalities, including text and images, yet the information captured from these modalities is not efficiently used in most existing RAG applications for decision support systems that aid medical diagnosis.\n",
     "\n",
@@ -25,7 +25,7 @@
     "\n",
     "This cookbook will highlight:\n",
     "\n",
-    "* The use of Unstructured Multi-Modal Datasets to parse images, text, and tables from documents (PDFs).\n",
+    "* The use of Unstructured Multi-Modal Datasets.\n",
     "* The application of multimodal embeddings, such as CLIP, to embed images and text.\n",
     "* The use of VDMS as a vector store with support for multi-modal data.\n",
     "* The retrieval of both images and text using similarity search.\n",
