--- a/docs/docs/integrations/tools/tavily_search.ipynb
+++ b/docs/docs/integrations/tools/tavily_search.ipynb
@@ -48,7 +48,7 @@
     }
    ],
    "source": [
-    "%pip install --quiet -U langchain-community tavily-python"
+    "%pip install -qU \"langchain-community>=0.2.11\" tavily-python"
    ]
   },
   {
